<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:rowCount="8"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/questionTextView"
        android:text="@string/question_text"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="38sp"
        android:layout_gravity="fill"
        android:layout_width="1dp"
        />

    <TextView
        android:id="@+id/answerHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_marginTop="27dp"
        android:text="@string/yourAnswer"
        android:textSize="20sp" />


    <Button
        android:id="@+id/answerTrueButton"
        android:text="@string/answer_true"
        android:layout_row="6"
        android:layout_column="0"
        />

    <Button
        android:id="@+id/answerFalseButton"
        android:text="@string/answer_false"
        android:layout_row="6"
        android:layout_column="1"
        />



</GridLayout>