<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">
    <!--Label and weight input Text Fields-->



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/weightEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/weightTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_weight"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <!--Label and height input fields-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/heightEditText"
        android:layout_row="1"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/heightTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_height"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/ageEditText"
        android:layout_row="2"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"/>

    <!--BMI display view-->

    <TextView
        android:id="@+id/ageTextView"
        android:layout_row="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_age"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="start"
        android:text="@string/Energy_Burn"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/answerHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_marginTop="27dp"
        android:text="@string/your_selection"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:gravity="center"
        android:layout_row="6"
        android:layout_column="0">

        <!-- In RadioGroup create the 1 Radio Button-->
        <!-- like this we will add some more Radio Button-->
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rid1"
            android:text="@string/Male"
            android:checked="true"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rid2"
            android:text="@string/Female"
            android:textSize="20sp"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_apply"
        android:text="@string/apply"
        android:layout_row="7"
        android:layout_column="0"
        />

</GridLayout>